Handle keyboard inputs using jquery.hotkeys plugin

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/calci.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="js/jquery.hotkeys.js"></script>
     <script src="js/calci.js"></script>
   </head>
   <body>
